--- a/styles.css
+++ b/styles.css
@@ -23,10 +23,10 @@ body{
     height: 100%;
     z-index: -2;
 }
-.card{
+#card1{
     margin-top: 90px;
 }
-.card-body{
+#card-body1{
     background-color: white;
 }
 #login-img{
